--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="./CSS/layout.css" />
 
@@ -59,88 +65,24 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" id="contact" href="/contactUs.html"
-                  >Contact Us</a
-                >
+                <a class="nav-link active" id="contact" href="/contactUs.html">
+                  Contact Us
+                </a>
               </li>
-              <div class="dropdown">
+              <div class="header-button">
                 <button
-                  class="btn dropdown-toggle"
+                  href="SignUp.html"
                   type="button"
-                  id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
+                  class="btn btn-1 btn-dark"
+                  id="register"
                 >
-                  States
+                  <a id="ejaz" href="SignUp.html">Register</a>
                 </button>
-                <ul
-                  class="dropdown-menu dropdown-menu-dark"
-                  aria-labelledby="dropdownMenuButton1"
-                >
-                  <div class="dropdown-states">
-                    <div class="box-1">
-                      <li><a href="#" class="states">Andhra Pradesh</a></li>
-                      <li><a href="#" class="states">Assam</a></li>
-                      <li><a href="#" class="states">Arunachal Pradesh</a></li>
-                      <li><a href="#" class="states">Bihar</a></li>
-                      <li><a href="#" class="states">Chhattisgarh</a></li>
-                      <li><a href="#" class="states">Goa</a></li>
-                      <li><a href="#" class="states">Gujrat</a></li>
-                      <li><a href="#" class="states">Haryana</a></li>
-                      <li><a href="#" class="states">Himachal Pradesh</a></li>
-                      <li><a href="#" class="states">Jammu & Kashmir</a></li>
-                    </div>
-
-                    <div class="box-1">
-                      <li><a href="#" class="states">Jharkhand</a></li>
-                      <li><a href="#" class="states">Karnataka</a></li>
-                      <li><a href="#" class="states">Kerela</a></li>
-                      <li><a href="#" class="states">Madhya Pradesh</a></li>
-                      <li><a href="#" class="states">Maharashtra</a></li>
-                      <li><a href="#" class="states">Manipur</a></li>
-                      <li><a href="#" class="states">Meghalaya</a></li>
-                      <li><a href="#" class="states">Mizoram</a></li>
-                      <li><a href="#" class="states">Nagaland</a></li>
-                      <li><a href="#" class="states">Odisha</a></li>
-                    </div>
-
-                    <div class="box-1">
-                      <li><a href="#" class="states">Punjab</a></li>
-                      <li><a href="#" class="states">Rajasthan</a></li>
-                      <li><a href="#" class="states">Sikkim</a></li>
-                      <li><a href="#" class="states">Tamil Nadu</a></li>
-                      <li><a href="#" class="states">Telanghana</a></li>
-                      <li><a href="#" class="states">Tripura</a></li>
-                      <li><a href="#" class="states">Uttar Pradesh</a></li>
-                      <li><a href="#" class="states">Uttarakhand</a></li>
-                      <li><a href="#" class="states">West Bengal</a></li>
-                    </div>
-                  </div>
-                </ul>
+                <button type="button" class="btn btn-1 btn-outline-dark">
+                  <a id="ejaz1" href="SignUp.html">Sign In</a>
+                </button>
               </div>
             </ul>
-            <form class="d-flex">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search for Recepies"
-                aria-label="Search"
-              />
-              <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
-            </form>
-            <div class="header-button">
-              <button
-                href="SignUp.html"
-                type="button"
-                class="btn btn-1 btn-dark"
-                id="register"
-              >
-                <a id="ejaz" href="SignUp.html">Register</a>
-              </button>
-              <button type="button" class="btn btn-1 btn-outline-dark">
-                <a id="ejaz1" href="SignUp.html">Sign In</a>
-              </button>
-            </div>
           </div>
         </div>
       </nav>
@@ -238,174 +180,75 @@
       </div>
     </section>
 
-    <!-- Trending section-->
+    <!-- recipes -->
+    <div class="container">
+      <div class="meal-wrapper">
+        <div class="meal-search">
+          <h2 class="title">Find Meals For Your Ingredients</h2>
+          <blockquote>
+            Real food doesn't have ingredients, real food is ingredients.<br />
+            <cite>- Jamie Oliver</cite>
+          </blockquote>
 
-    <div class="recipe" id="trending"><p>Trending Recipes...</p></div>
-    <section id="main-course">
-      <div class="row">
-        <div class="card-group">
-          <div class="food-column col-lg-3 col-md-6">
-            <div class="card">
-              <img src="img/kebeb.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Mutton Kebab</h5>
-                <p class="card-text">
-                  Have a look before having a maincourse...
-                </p>
-                <p class="rating-wrapper1">
-                  <input type="radio" name="rating" id="star-1" />
-                  <label for="star-1"></label>
-                  <input type="radio" name="rating" id="star-2" />
-                  <label for="star-2"></label>
-                  <input type="radio" name="rating" id="star-3" />
-                  <label for="star-3"></label>
-                  <input type="radio" name="rating" id="star-4" />
-                  <label for="star-4"></label>
-                  <input type="radio" name="rating" id="star-5" />
-                  <label for="star-5"></label>
-                </p>
-              </div>
-            </div>
+          <div class="meal-search-box">
+            <input
+              type="text"
+              class="search-control"
+              placeholder="Enter an ingredient"
+              id="search-input"
+            />
+            <button type="submit" class="search-btn btn" id="search-btn">
+              <i class="fas fa-search"></i>
+            </button>
           </div>
+        </div>
 
-          <div class="food-column col-lg-3 col-md-6">
-            <div class="card">
-              <img src="img/changezi.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Chicken Changezi</h5>
-                <p class="card-text">Are you a gymnast then its for you...</p>
-                <p class="rating-wrapper2">
-                  <input type="radio" name="rating" id="star-1" />
-                  <label for="star-1"></label>
-                  <input type="radio" name="rating" id="star-2" />
-                  <label for="star-2"></label>
-                  <input type="radio" name="rating" id="star-3" />
-                  <label for="star-3"></label>
-                  <input type="radio" name="rating" id="star-4" />
-                  <label for="star-4"></label>
-                  <input type="radio" name="rating" id="star-5" />
-                  <label for="star-5"></label>
-                </p>
+        <div class="meal-result">
+          <h2 class="title">Your Search Results:</h2>
+          <div id="meal">
+            <!-- meal item -->
+            <!-- <div class = "meal-item">
+              <div class = "meal-img">
+                <img src = "food.jpg" alt = "food">
               </div>
-            </div>
+              <div class = "meal-name">
+                <h3>Potato Chips</h3>
+                <a href = "#" class = "recipe-btn">Get Recipe</a>
+              </div>
+            </div> -->
+            <!-- end of meal item -->
           </div>
+        </div>
 
-          <div class="food-column col-lg-3 col-md-6">
-            <div class="card">
-              <img src="img/Biryani (2).jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Biryani</h5>
-                <p class="card-text">
-                  Wants to have something light, Click here...
-                </p>
-                <p class="rating-wrapper3">
-                  <input type="radio" name="rating" id="star-1" />
-                  <label for="star-1"></label>
-                  <input type="radio" name="rating" id="star-2" />
-                  <label for="star-2"></label>
-                  <input type="radio" name="rating" id="star-3" />
-                  <label for="star-3"></label>
-                  <input type="radio" name="rating" id="star-4" />
-                  <label for="star-4"></label>
-                  <input type="radio" name="rating" id="star-5" />
-                  <label for="star-5"></label>
-                </p>
-              </div>
-            </div>
-          </div>
+        <div class="meal-details">
+          <!-- recipe close btn -->
+          <button
+            type="button"
+            class="btn recipe-close-btn"
+            id="recipe-close-btn"
+          >
+            <i class="fas fa-times"></i>
+          </button>
 
-          <div class="food-column col-lg-3 col-md-6">
-            <div class="card">
-              <img src="img/Shahikheer.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Shahi Kheer</h5>
-                <p class="card-text">
-                  Its always incomplete without dessert...
-                </p>
-                <p class="rating-wrapper4">
-                  <input type="radio" name="rating" id="star-1" />
-                  <label for="star-1"></label>
-                  <input type="radio" name="rating" id="star-2" />
-                  <label for="star-2"></label>
-                  <input type="radio" name="rating" id="star-3" />
-                  <label for="star-3"></label>
-                  <input type="radio" name="rating" id="star-4" />
-                  <label for="star-4"></label>
-                  <input type="radio" name="rating" id="star-5" />
-                  <label for="star-5"></label>
-                </p>
-              </div>
+          <!-- meal content -->
+          <div class="meal-details-content">
+            <!-- <h2 class = "recipe-title">Meals Name Here</h2>
+            <p class = "recipe-category">Category Name</p>
+            <div class = "recipe-instruct">
+              <h3>Instructions:</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo blanditiis quis accusantium natus! Porro, reiciendis maiores molestiae distinctio veniam ratione ex provident ipsa, soluta suscipit quam eos velit autem iste!</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam voluptatibus ad obcaecati magnam, esse numquam nisi ut adipisci in?</p>
             </div>
+            <div class = "recipe-meal-img">
+              <img src = "food.jpg" alt = "">
+            </div>
+            <div class = "recipe-link">
+              <a href = "#" target = "_blank">Watch Video</a>
+            </div> -->
           </div>
         </div>
       </div>
-    </section>
-
-    <!-- FOOD COLUMN -->
-    <div class="recipe" id="trending1"><p>Categories...</p></div>
-    <section id="main-course">
-      <div class="row">
-        <div class="card-group">
-          <div class="food-column col-lg-3 col-md-6">
-            <div class="card">
-              <img src="img/starter1.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Starter</h5>
-                <p class="card-text">
-                  Have a look before having a maincourse...
-                </p>
-                <p class="card-text">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="food-column col-lg-3 col-md-6">
-            <div class="card">
-              <img src="img/veg1.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Veg</h5>
-                <p class="card-text">Are you vegetarian then its for you...</p>
-                <p class="card-text">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="food-column col-lg-3 col-md-6">
-            <div class="card">
-              <img src="img/nonveg1.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Non-Veg</h5>
-                <p class="card-text">
-                  Wants to have a rich protein diet, Click here...
-                </p>
-                <p class="card-text">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="food-column col-lg-3 col-md-6">
-            <div class="card">
-              <img src="img/dessert1.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Dessert</h5>
-                <p class="card-text">
-                  Its always incomplete without dessert...
-                </p>
-                <p class="card-text">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    </div>
 
     <!-- DOWNLOAD -->
 
@@ -428,5 +271,6 @@
       <a class="footer-link" href="#">Facebook</a>
       <p class="copyright">©️ 2022 FoodVlogz. All rights reserved.</p>
     </div>
+    <script src="/JS/index.js"></script>
   </body>
 </html>
