--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
 
     <link rel="stylesheet" href="./CSS/layout.css" />
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
     <link rel="icon" href="/CSS/favicon.ico" />
 
     <title>FoodVlogz</title>
@@ -76,7 +71,7 @@
                   class="btn btn-1 btn-dark"
                   id="register"
                 >
-                  <a id="ejaz" href="SignUp.html">Register</a>
+                  <a id="ejaz" href="register.html">Register</a>
                 </button>
                 <button type="button" class="btn btn-1 btn-outline-dark">
                   <a id="ejaz1" href="SignUp.html">Sign In</a>
@@ -271,6 +266,11 @@
       <a class="footer-link" href="#">Facebook</a>
       <p class="copyright">©️ 2022 FoodVlogz. All rights reserved.</p>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script src="/JS/index.js"></script>
   </body>
 </html>
